--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ h1 {
 }
 
 button {
-  border: 1px solid transparent;
+  border: 1px solid;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
@@ -71,9 +71,10 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  color: #ffffff;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #22c55e;
 }
 button:focus,
 button:focus-visible {
@@ -94,7 +95,8 @@ input {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #16a34a;
+    color:#ffffff;
   }
 }
 
